--- a/public1/css/tree.css
+++ b/public1/css/tree.css
@@ -35,16 +35,20 @@ color: rgba(10,20,25,0.8);
 //-webkit-flex-wrap: nowrap;
 //width: 90%;
 display: block;
-margin:0.1em;
+margin:0.0em;
 margin-left: 1em;
-padding:0.1em;
-background-color: rgba(200,255,200,0.0);
+padding:0.3em;
+background-color: rgba(200,255,200,0.00);
+border:0px;
+border-left: 1px;
+border-style: solid;
+border-color: rgba(200,255,200,0.0);
 }
 .leaf
 {
 display: inline-block;
 font-size: 1.0em;
-padding:0.0em;
+padding:0.3em;
 padding-left:0.5em;
 }
 .leaf:first-child
@@ -103,10 +107,7 @@ display:block;
 {
 color: rgba(255,200,80,1.0);
 //display: block;
-//width: 31%;
 font-style: plain;
-font-family: sans-serif;
-font-size: 0.8em;
 }
 .fn
 {
@@ -119,5 +120,5 @@ font-size: 0.8em;
 .quote
 {
 font-style: italic;
-color: rgba(255,230, 250,1.0);
+color: rgba(255,220, 240,1.0);
 }
